Sun May 19 05:57:24 CDT 2002 Adam Heath <doogie@debian.org>

  * automake/dpkg.m4.  Gah, I hate gcc.  AC_TRY_COMPILE() produces code
    of the form 'int main() { ... }'.  When -Werror -Wstrict-prototypes is
    given to gcc, it thinks the above code snippet is an error, and aborts.
    This was making DPKG_C_GCC_TRY_WARNS disable some -W options.  So, I
    no longer use AC_TRY_COMPILE.

Sun May 19 04:56:51 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules:  Oops.  The command to run is aclocal, not aclocal.m4.

Sun May 19 04:45:41 CDT 2002 Adam Heath <doogie@debian.org>

  * configure.in, config.h.bot(removed), acconfig.h(removed):  The latest
    autoheader/autoconf combination allows us to do everything in
    configure.in.  config.h.bot is now in AH_BOTTOM(), and the
    descriptions for all the defines(from acconfig.h) are now part of
    AC_DEFINE().

Sun May 19 04:41:07 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: All the hard-coded calls to scripts/dpkg-gencontrol.pl
    are now down thru a variable, GENCONTROL.

Sun May 19 04:26:58 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: Remove all calls to $(shell pwd), and use $(CURDIR).
    Also, `pwd` is removed.  There was a var, DIR := $(shell pwd);
    instances of this var were also replaced with CURDIR.

Sun May 19 04:18:46 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: If automake/*.m4 is modified, rebuild aclocal.m4.  If
    aclocal.m4 or configure.in are modified, rebuild configure.in.
    config.h.in gets rebuilt if configure.in is modified.  And, lastly,
    configure is rerun, if configure or config.h.in is modified.

Sun May 19 04:09:25 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: Fix targets, so that if configure fails, but actually
    succeeds in creating config.status(as might happen if one has a
    c-style comment in configure.in, and the shell trys running /foo), then
    the build will actually fail correctly.
