@@ -1,3 +1,7 @@
+Sun May 19 06:01:31 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * configure.in, automake/dpkg.m4: Make a new macro, DPKG_C_GCC_ATTRIBUTE.
+
 Sun May 19 05:57:24 CDT 2002 Adam Heath <doogie@debian.org>
 
   * automake/dpkg.m4.  Gah, I hate gcc.  AC_TRY_COMPILE() produces code
